<resources>
    <string name="app_name">Ulide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Teófilo Vale</string>
    <string name="nav_header_subtitle">Tevale12@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_myProfile">My profile</string>
    <string name="menu_findRoutes">Find Routes</string>
    <string name="menu_createSpots">Create Spots</string>
    <string name="action_favorite">Favorite</string>
    <string name="menu_spots"> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">👤 Username</string>
    <string name="prompt_password">🔒 Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_spots_location">Location</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create new account</string>
    <string name="enter_name">Enter First and Last Name</string>
    <string name="enter_bdate">Enter your birth date</string>
    <string name="enter_your_gender">Enter your gender</string>
    <string name="enter_your_password">Enter your password</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>None Binary</item>
        <item>I abstain</item>
    </string-array>
    <string name="title_activity_my_profile_tab">MyProfileTab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="access_token_mapbox">sk.eyJ1IjoibGVvbmVyZG8xNSIsImEiOiJja3gxNW5sNXUxYzhlMnZwOGNhMDJ6ZnFwIn0.JSV2KS8xZ9-qGdtfQ_R7uQ</string>
    <string-array name="layer_spinner_array">
        <item>Water</item>
        <item>Building</item>
    </string-array>
    <string name="menu_map_style_streets">Streets</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="move_map_instruction">Move map to place\nmarker at desired location</string>
    <string name="zoom_map_in_and_out_instruction">Zoom in and out to see cluster numbers change</string>
    <string name="tap_on_feature_box_instruction">Tap on bounding box</string>
    <string name="fragment_in_card_below">Map fragment container in card below</string>
    <string name="download_button_text">Download</string>
    <string name="list_button_text">List</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="location_component_fragment_text">User\'s current location on a map fragment</string>
    <string name="new_location">New lat: %1$s New longitude: %2$s</string>
    <string name="settings_dialog_title">Settings</string>
    <string name="settings_dialog_positive_button_text">Save</string>
    <string name="settings_status_toast_settings_saved">Settings saved</string>
    <string name="settings_dialog_negative_button_text">Cancel</string>
    <string name="analytics_opt_out_textview">Opt out of analytics tracking</string>
    <string name="login_or_signup_account_switch_text">Always show account login/creation screen</string>
    <string name="log_out_of_account_button">Log out of Mapbox account</string>
    <string name="log_out_toast_confirm">Successfully logged out</string>
    <string name="basic_offline_deleted_toast">Yosemite offline map deleted</string>
    <string name="draw_marker_options_title">Hello World!</string>
    <string name="draw_marker_options_snippet">Welcome to my marker.</string>
    <string name="directions_activity_toast_message">Route is %1$f meters long.</string>
    <string name="snaking_directions_activity_error">Direction route retrieval failed</string>
    <string name="dialog_title">Name new region</string>
    <string name="dialog_message">Downloads the map region you currently are viewing</string>
    <string name="dialog_positive_button">Download</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_toast">Region name cannot be empty.</string>
    <string name="end_progress_success">Region downloaded successfully.</string>
    <string name="toast_no_regions_yet">You have no regions yet.</string>
    <string name="toast_region_deleted">Region deleted</string>
    <string name="navigate_positive_button">Navigate to</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="navigate_negative_button_title">Cancel</string>
    <string name="navigate_title">List</string>
    <string name="region_name">Region %1$d</string>
    <string name="set_region_name_hint">Enter name</string>
    <string name="simple_offline_end_progress_success">Region downloaded successfully.</string>
    <string name="feature_count_snackbar_feature_size">%1$d features in box</string>
    <string name="query_feature_marker_title">Properties:</string>
    <string name="query_feature_no_properties_found">No feature properties found</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select a location</string>
</resources>