<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ulide.ui.home.MapsHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_maps_home" />
    <fragment
        android:id="@+id/nav_my_profile"
        android:name="com.example.ulide.ui.myProfile.MyProfileFragment"
        android:label="@string/menu_myProfile"
        tools:layout="@layout/fragment_my_profile" />
    <fragment
        android:id="@+id/nav_find_routes"
        android:name="com.example.ulide.ui.findRoutes.FindRoutesFragment"
        android:label="@string/menu_findRoutes"
        tools:layout="@layout/fragment_find_routes" >

        <action
            android:id="@+id/action_nav_find_routes_to_nav_spots_from_route"
            app:destination="@id/nav_spots_from_route"
            app:enterAnim="@android:anim/slide_in_left"
            app:popEnterAnim="@anim/slide_in_right"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/nav_creat_spots"
        android:name="com.example.ulide.ui.list.RoutesFragment"
        android:label="@string/menu_createSpots"
        tools:layout="@layout/fragment_routes_list" />

    <fragment
        android:id="@+id/nav_spots_from_route"
        android:name="com.example.ulide.ui.spotsFromRoute.SpotsFromRouteFragment"
        android:label="@string/menu_spots"
        tools:layout="@layout/fragment_spots_from_route" />


</navigation>